fix mobile horizontal scroll bug and header style

--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -62,7 +62,7 @@
       &_sub {
         font-size: 1.2rem;
         bottom: -0.8rem;
-        left: 13rem;
+        left: 11.4rem;
       }
     }
   }
